--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build Microblog
-        uses: herschel666/microblog-action@v0.5.2
+        uses: herschel666/microblog-action@beta
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           url: 'https://ekblog.de'
