feat: add deployment action

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,8 +22,16 @@ jobs:
           i18n.prev: 'vorherige Artikel'
           i18n.next: 'nächste Artikel'
 
-      - name: Archive site
-        uses: actions/upload-artifact@v2
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v1.2
         with:
-          name: site
-          path: _site
+          publish-dir: '_site'
+          production-branch: KillYourMaster
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: 'Deploy from microblog action'
+          enable-pull-request-comment: false
+          enable-commit-comment: false
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        timeout-minutes: 1
