--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -16,8 +16,10 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           url: 'https://ekblog.de'
-          title: 'ek'
+          lang: 'de'
+          title: 'ek|blog'
           description: 'Gemischter Un-, Fein- & Irrsinn'
+          date-format: 'd.M.yyyy'
           i18n.posts: 'Artikel'
           i18n.prev: 'vorherige Artikel'
           i18n.next: 'nächste Artikel'
