chore: re-build site on push on main branch

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,6 +1,9 @@
 name: Build and Deploy
 
 on:
+  push:
+    branches:
+      - KillYourMaster
   issues:
     types: [opened, edited, reopened, closed, deleted, labeled, unlabeled]
 
