--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,14 +29,10 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: Test
+      - name: Build
         run: |
           npm ci
-          npm run fmt:check
-          npm test
-
-      - name: Build
-        run: npm run build
+          npm run build
 
       - name: Build Microblog
         uses: herschel666/microblog-action@beta
